--- a/ActionOverlaySnippets.html
+++ b/ActionOverlaySnippets.html
@@ -37,7 +37,7 @@ function MM_callJS(jsStr) { //v2.0
 		<div id="TextHold" class="ActionText"><span style="font-size:16px;">HOLD</span><br><span style="font-style:normal;font-weight:normal;font-size:12px;"></span><br><span style="font-style:normal;font-weight:normal;font-size:14px;">Do nothing.</span></div>
 	</div>
 <div id="ActionOnslaught" class="Action" onClick="ActionOnslaughtoff()">
-		<div id="TextOnslaught" class="ActionText"><span style="font-style:normal;font-weight:normal;font-size:14px;"><br/>Attack the closest explorer that is in range of and visible to this hostile. Then attack the closest explorer that is in range of and visible to this hostile (this may be a different target if the first explorer is taken out of action or another explorer is equally close).</span></div>
+		<div id="TextOnslaught" class="ActionText"><span style='font-size:16px'>ONSLAUGHT</span><br><span style="font-style:normal;font-weight:normal;font-size:12px;"></span><br><span style="font-style:normal;font-weight:normal;font-size:14px;"><br/>Attack the closest explorer that is in range of and visible to this hostile. Then attack the closest explorer that is in range of and visible to this hostile (this may be a different target if the first explorer is taken out of action or another explorer is equally close).</span></div>
 	</div>
 <div id="ActionOvercharge" class="Action" onClick="ActionOverchargeoff()">
 		<div id="TextOvercharge" clas="ActionText"><span style="font-size:16px;">UNIQUE: OVERCHARGE</span><br><span style="font-style:normal;font-weight:normal;font-size:14px;"><br/>Make an overcharged Plasma Pistol attack against the closest explorer that is in range of and visible to Obsidus Mallex. </span></div>
