--- a/New_OM_Roll_7_9.html
+++ b/New_OM_Roll_7_9.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-<title>New OM Roll 7-9</title
+<title>New OM Roll 7-9</title>
 <link rel="stylesheet" type="text/css" href="headerstyle.css">
 <style id="applicationStylesheet" type="text/css">
 	.mediaViewInfo {
