--- a/New_RP_10_15.html
+++ b/New_RP_10_15.html
@@ -1401,7 +1401,7 @@
 			<span>4+</span>
 		</div>
 		<div id="Chaos_Stave1">
-			<span>Chaos Stave</span><span>1</span>
+			<span>Chaos Stave</span><span><sup>1</sup></span>
 		</div>
 		<svg class="Line_2_A37_Line_226">
 			<path fill="transparent" stroke="rgba(0,0,0,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Line_2_A37_Line_226" d="M 0 0 L 172 0">
@@ -1424,7 +1424,7 @@
 			</path>
 		</svg>
 		<div id="ID1Empowered__The_action_dice_">
-			<span>1</span><span>Empowered:</span><span style="font-style:normal;font-weight:normal;"> The action dice for a Chaos Stave attack is            if the Rogue Psyker is empowered (see reverse), and      in all other circumstances.</span>
+			<span><sup>1</sup></span><span>Empowered:</span><span style="font-style:normal;font-weight:normal;"> The action dice for a Chaos Stave attack is <img src="double_triangle_A33_Rectangle_474_pattern.png" alt="doubletriangle" align="bottom"> if the Rogue Psyker is empowered (see reverse), and <img src="single_triangle_A33_Rectangle_476_pattern.png" alt="singletriangle" align="bottom"> in all other circumstances.</span>
 		</div>
 	</div>
 	<div id="Rogue_Psyker">
@@ -1434,71 +1434,7 @@
 		<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_663" rx="0" ry="0" x="0" y="0" width="343" height="271">
 		</rect>
 	</svg>
-	<div id="Group_684">
-		<div id="Group_683">
-			<svg class="Rectangle_655">
-				<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="3px" stroke-linejoin="round" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_655" rx="7" ry="7" x="0" y="0" width="55" height="55">
-				</rect>
-			</svg>
-			<div id="ID1_3_A37_Text_830">
-				<span>1-3</span>
-			</div>
-		</div>
-		<div id="Group_677">
-			<svg class="Rectangle_656">
-				<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="3px" stroke-linejoin="round" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_656" rx="7" ry="7" x="0" y="0" width="55" height="55">
-				</rect>
-			</svg>
-			<div id="ID10_12_A37_Text_831">
-				<span>10-12</span>
-			</div>
-		</div>
-		<div id="Group_682">
-			<svg class="Rectangle_657">
-				<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="3px" stroke-linejoin="round" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_657" rx="7" ry="7" x="0" y="0" width="55" height="55">
-				</rect>
-			</svg>
-			<div id="ID4_6_A37_Text_832">
-				<span>4-6</span>
-			</div>
-		</div>
-		<div id="Group_681">
-			<svg class="Rectangle_658">
-				<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="3px" stroke-linejoin="round" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_658" rx="7" ry="7" x="0" y="0" width="55" height="55">
-				</rect>
-			</svg>
-			<div id="ID7_9_A37_Text_833">
-				<span>7-9</span>
-			</div>
-		</div>
-		<div id="Group_679">
-			<svg class="Rectangle_659">
-				<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="3px" stroke-linejoin="round" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_659" rx="7" ry="7" x="0" y="0" width="55" height="55">
-				</rect>
-			</svg>
-			<div id="ID13_15_A37_Text_834">
-				<span>13-15</span>
-			</div>
-		</div>
-		<div id="Group_680">
-			<svg class="Rectangle_660">
-				<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="3px" stroke-linejoin="round" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_660" rx="7" ry="7" x="0" y="0" width="55" height="55">
-				</rect>
-			</svg>
-			<div id="ID16_19_A37_Text_835">
-				<span>16-19</span>
-			</div>
-		</div>
-		<div id="Group_678">
-			<svg class="Rectangle_661">
-				<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="3px" stroke-linejoin="round" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_661" rx="7" ry="7" x="0" y="0" width="55" height="55">
-				</rect>
-			</svg>
-			<div id="ID20_A37_Text_836">
-				<span>20</span>
-			</div>
-		</div>
-	</div>
+	<img id="Group_684" src="Group_684.png" srcset="Group_684.png 1x, Group_684@2x.png 2x">
 	<svg class="Rectangle_662">
 		<rect fill="rgba(0,0,0,1)" stroke="rgba(0,0,0,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_662" rx="0" ry="0" x="0" y="0" width="343" height="21">
 		</rect>
@@ -1632,20 +1568,7 @@
 		<rect fill="url(#double_triangle_A37_Rectangle_652_pattern)" id="double_triangle_A37_Rectangle_651" rx="0" ry="0" x="0" y="0" width="29" height="12">
 		</rect>
 	</svg>
-	<svg class="double_triangle_A37_Rectangle_653">
-		<pattern elementId="double_triangle_A37_Rectangle_654" id="double_triangle_A37_Rectangle_654_pattern" x="0" y="0" width="100%" height="100%">
-			<image x="0" y="0" width="100%" height="100%" href="double_triangle_A37_Rectangle_654_pattern.png" xlink:href="double_triangle_A37_Rectangle_654_pattern.png"></image>
-		</pattern>
-		<rect fill="url(#double_triangle_A37_Rectangle_654_pattern)" id="double_triangle_A37_Rectangle_653" rx="0" ry="0" x="0" y="0" width="25" height="11">
-		</rect>
-	</svg>
-	<svg class="single_triangle_A37_Rectangle_655">
-		<pattern elementId="single_triangle_A37_Rectangle_656" id="single_triangle_A37_Rectangle_656_pattern" x="0" y="0" width="100%" height="100%">
-			<image x="0" y="0" width="100%" height="100%" href="single_triangle_A37_Rectangle_656_pattern.png" xlink:href="single_triangle_A37_Rectangle_656_pattern.png"></image>
-		</pattern>
-		<rect fill="url(#single_triangle_A37_Rectangle_656_pattern)" id="single_triangle_A37_Rectangle_655" rx="0" ry="0" x="0" y="0" width="12.713" height="11">
-		</rect>
-	</svg>
+
 	<div id="mySidenav" class="sidenav">
 		<a href="New_TG_Home.html" class="TGNav">Traitor Guardsmen</a>
 		<a href="New_NC_Home.html" class="NCNav">Negavolt Cultist</a>
