--- a/New_RP_Home.html
+++ b/New_RP_Home.html
@@ -1191,7 +1191,7 @@
 			<span>4+</span>
 		</div>
 		<div id="Chaos_Stave1">
-			<span>Chaos Stave</span><span>1</span>
+			<span>Chaos Stave</span><span><sup>1</sup></span>
 		</div>
 		<svg class="Line_2_A33_Line_166">
 			<path fill="transparent" stroke="rgba(0,0,0,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Line_2_A33_Line_166" d="M 0 0 L 172 0">
@@ -1214,7 +1214,7 @@
 			</path>
 		</svg>
 		<div id="ID1Empowered__The_action_dice_">
-			<span>1</span><span>Empowered:</span><span style="font-style:normal;font-weight:normal;"> The action dice for a Chaos Stave attack is            if the Rogue Psyker is empowered (see reverse), and      in all other circumstances.</span>
+			<span><sup>1</sup></span><span>Empowered:</span><span style="font-style:normal;font-weight:normal;"> The action dice for a Chaos Stave attack is <img src="double_triangle_A33_Rectangle_474_pattern.png" alt="doubletriangle" align="bottom"> if the Rogue Psyker is empowered (see reverse), and <img src="single_triangle_A33_Rectangle_476_pattern.png" alt="singletriangle" align="bottom"> in all other circumstances.</span>
 		</div>
 	</div>
 	<div id="Rogue_Psyker">
@@ -1306,20 +1306,8 @@
 		<rect fill="url(#double_triangle_A33_Rectangle_472_pattern)" id="double_triangle_A33_Rectangle_471" rx="0" ry="0" x="0" y="0" width="29" height="12">
 		</rect>
 	</svg>
-	<svg class="double_triangle_A33_Rectangle_473">
-		<pattern elementId="double_triangle_A33_Rectangle_474" id="double_triangle_A33_Rectangle_474_pattern" x="0" y="0" width="100%" height="100%">
-			<image x="0" y="0" width="100%" height="100%" href="double_triangle_A33_Rectangle_474_pattern.png" xlink:href="double_triangle_A33_Rectangle_474_pattern.png"></image>
-		</pattern>
-		<rect fill="url(#double_triangle_A33_Rectangle_474_pattern)" id="double_triangle_A33_Rectangle_473" rx="0" ry="0" x="0" y="0" width="25" height="11">
-		</rect>
-	</svg>
-	<svg class="single_triangle_A33_Rectangle_475">
-		<pattern elementId="single_triangle_A33_Rectangle_476" id="single_triangle_A33_Rectangle_476_pattern" x="0" y="0" width="100%" height="100%">
-			<image x="0" y="0" width="100%" height="100%" href="single_triangle_A33_Rectangle_476_pattern.png" xlink:href="single_triangle_A33_Rectangle_476_pattern.png"></image>
-		</pattern>
-		<rect fill="url(#single_triangle_A33_Rectangle_476_pattern)" id="single_triangle_A33_Rectangle_475" rx="0" ry="0" x="0" y="0" width="12.713" height="11">
-		</rect>
-	</svg>
+
+
 	<div id="mySidenav" class="sidenav">
 		<a href="New_TG_Home.html" class="TGNav">Traitor Guardsmen</a>
 		<a href="New_NC_Home.html" class="NCNav">Negavolt Cultist</a>
