--- a/New_CB_Home.html
+++ b/New_CB_Home.html
@@ -1113,7 +1113,7 @@
 			<span>4+</span>
 		</div>
 		<div id="Pistol___Melee_Weapon1">
-			<span>Pistol & Melee Weapon</span><span>1</span>
+			<span>Pistol & Melee Weapon</span>
 		</div>
 		<svg class="Line_2_A40_Line_271">
 			<path fill="transparent" stroke="rgba(0,0,0,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Line_2_A40_Line_271" d="M 0 0 L 172 0">
