--- a/New_UG_20.html
+++ b/New_UG_20.html
@@ -1341,7 +1341,7 @@
 			<span>4+</span>
 		</div>
 		<div id="Claws___Talons1">
-			<span>Claws & Talons</span><span>1</span>
+			<span>Claws & Talons</span><span><sup>1</sup></span>
 		</div>
 		<svg class="Line_2_A32_Line_154">
 			<path fill="transparent" stroke="rgba(0,0,0,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Line_2_A32_Line_154" d="M 0 0 L 172 0">
@@ -1364,7 +1364,7 @@
 			</path>
 		</svg>
 		<div id="ID1Frenzied__When_an_Ur_Ghul_a">
-			<span>1</span><span>Frenzied:</span><span style="font-style:normal;font-weight:normal;"> When an Ur-Ghul attacks, make three attack rolls. Carry out each attack one at a time, one after the other. The target chosen for the second and third attacks must either be the same as the target of the previous attack, or in the same hex as or an adjacent hex to the large of the previous attack.</span>
+			<span><sup>1</sup></span><span>Frenzied:</span><span style="font-style:normal;font-weight:normal;"> When an Ur-Ghul attacks, make three attack rolls. Carry out each attack one at a time, one after the other. The target chosen for the second and third attacks must either be the same as the target of the previous attack, or in the same hex as or an adjacent hex to the large of the previous attack.</span>
 		</div>
 	</div>
 	<div id="Ur_Ghul">
