--- a/New_UG_1_3.html
+++ b/New_UG_1_3.html
@@ -806,6 +806,14 @@
 		left: 16px;
 		top: 495px;
 	}
+	#Group_684 {
+		position: absolute;
+		width: 335px;
+		height: 114px;
+		left: 20px;
+		top: 524px;
+		overflow: visible;
+	}
 	#Group_683 {
 		position: absolute;
 		width: 55px;
@@ -1374,69 +1382,7 @@
 		<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_663" rx="0" ry="0" x="0" y="0" width="343" height="271">
 		</rect>
 	</svg>
-	<div id="Group_683">
-		<svg class="Rectangle_655">
-			<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="3px" stroke-linejoin="round" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_655" rx="7" ry="7" x="0" y="0" width="55" height="55">
-			</rect>
-		</svg>
-		<div id="ID1_3_A28_Text_422">
-			<span>1-3</span>
-		</div>
-	</div>
-	<div id="Group_677">
-		<svg class="Rectangle_656">
-			<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="3px" stroke-linejoin="round" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_656" rx="7" ry="7" x="0" y="0" width="55" height="55">
-			</rect>
-		</svg>
-		<div id="ID10_12_A28_Text_423">
-			<span>10-12</span>
-		</div>
-	</div>
-	<div id="Group_682">
-		<svg class="Rectangle_657">
-			<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="3px" stroke-linejoin="round" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_657" rx="7" ry="7" x="0" y="0" width="55" height="55">
-			</rect>
-		</svg>
-		<div id="ID4_6_A28_Text_424">
-			<span>4-6</span>
-		</div>
-	</div>
-	<div id="Group_681">
-		<svg class="Rectangle_658">
-			<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="3px" stroke-linejoin="round" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_658" rx="7" ry="7" x="0" y="0" width="55" height="55">
-			</rect>
-		</svg>
-		<div id="ID7_9_A28_Text_425">
-			<span>7-9</span>
-		</div>
-	</div>
-	<div id="Group_679">
-		<svg class="Rectangle_659">
-			<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="3px" stroke-linejoin="round" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_659" rx="7" ry="7" x="0" y="0" width="55" height="55">
-			</rect>
-		</svg>
-		<div id="ID13_15_A28_Text_426">
-			<span>13-15</span>
-		</div>
-	</div>
-	<div id="Group_680">
-		<svg class="Rectangle_660">
-			<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="3px" stroke-linejoin="round" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_660" rx="7" ry="7" x="0" y="0" width="55" height="55">
-			</rect>
-		</svg>
-		<div id="ID16_19_A28_Text_427">
-			<span>16-19</span>
-		</div>
-	</div>
-	<div id="Group_678">
-		<svg class="Rectangle_661">
-			<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="3px" stroke-linejoin="round" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_661" rx="7" ry="7" x="0" y="0" width="55" height="55">
-			</rect>
-		</svg>
-		<div id="ID20_A28_Text_428">
-			<span>20</span>
-		</div>
-	</div>
+	<img id="Group_684" src="Group_684.png" srcset="Group_684.png 1x, Group_684@2x.png 2x">
 	<svg class="Rectangle_662">
 		<rect fill="rgba(0,0,0,1)" stroke="rgba(0,0,0,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_662" rx="0" ry="0" x="0" y="0" width="343" height="21">
 		</rect>
