--- a/New_NC_Home.html
+++ b/New_NC_Home.html
@@ -806,6 +806,14 @@
 		left: 16px;
 		top: 495px;
 	}
+	#Group_684 {
+		position: absolute;
+		width: 335px;
+		height: 114px;
+		left: 20px;
+		top: 524px;
+		overflow: visible;
+	}
 	#Group_683 {
 		position: absolute;
 		width: 55px;
@@ -814,6 +822,7 @@
 		top: 524px;
 		overflow: visible;
 	}
+	
 	#Group_677 {
 		position: absolute;
 		width: 55px;
@@ -1139,7 +1148,7 @@
 			<span>4+</span>
 		</div>
 		<div id="Electro_goad1_A3_Text_132">
-			<span>Electro-goad</span><span>1</span>
+			<span>Electro-goad</span><span><sup>1</sup></span>
 		</div>
 		<svg class="Line_2_A3_Line_34">
 			<path fill="transparent" stroke="rgba(0,0,0,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Line_2_A3_Line_34" d="M 0 0 L 172 0">
@@ -1162,7 +1171,7 @@
 			</path>
 		</svg>
 		<div id="ID1Lightning_Arc__Ignore_cover">
-			<span>1</span><span>Lightning Arc:</span><span style="font-style:normal;font-weight:normal;"> Ignore cover. In addition, no defense roll can be made against a wound or grievous wound inflicted by an Electro-goad attack.</span>
+			<span><sup>1</sup></span><span>Lightning Arc:</span><span style="font-style:normal;font-weight:normal;"> Ignore cover. In addition, no defense roll can be made against a wound or grievous wound inflicted by an Electro-goad attack.</span>
 		</div>
 	</div>
 	<div id="Negavolt_Cultist">
