--- a/New_OM_Home.html
+++ b/New_OM_Home.html
@@ -1191,7 +1191,7 @@
 			<span>4+</span>
 		</div>
 		<div id="Thunder_Hammer1">
-			<span>Thunder Hammer</span><span>1</span>
+			<span>Thunder Hammer</span><span><sup>1</sup></span>
 		</div>
 		<svg class="Line_2_A55_Line_442">
 			<path fill="transparent" stroke="rgba(0,0,0,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Line_2_A55_Line_442" d="M 0 0 L 172 0">
@@ -1218,10 +1218,10 @@
 			</path>
 		</svg>
 		<div id="Plasma_Pistol2">
-			<span>Plasma Pistol</span><span>2</span>
+			<span>Plasma Pistol</span><span><sup>2</sup></span>
 		</div>
 		<div id="ID1Thunder_Hammer__No_defence_">
-			<span>1</span><span>Thunder Hammer:</span><span style="font-style:normal;font-weight:normal;"> No defence roll can be made against a Thunder Hammer attack.<br/></span><br><span>2</span><span>Plasma Pistol:</span><span style="font-style:normal;font-weight:normal;"> No defence roll can be made against an overcharged Plama Pistol attack.</span>
+			<span><sup>1</sup></span><span>Thunder Hammer:</span><span style="font-style:normal;font-weight:normal;"> No defence roll can be made against a Thunder Hammer attack.<br/></span><br><span><sup>2</sup></span><span>Plasma Pistol:</span><span style="font-style:normal;font-weight:normal;"> No defence roll can be made against an overcharged Plama Pistol attack.</span>
 		</div>
 	</div>
 	<div id="Obsidius_Mallex__Chaos_Lord">
