--- a/New_TG_Roll_10_12.html
+++ b/New_TG_Roll_10_12.html
@@ -795,7 +795,7 @@
 		font-family: Helvetica Neue;
 		font-style: normal;
 		font-weight: bold;
-		font-size: 11px;
+		font-size: 10.5px;
 		color: rgba(0,0,0,1);
 	}
 	.Line_14 {
@@ -1494,7 +1494,7 @@
 		<span>4+</span>
 	</div>
 	<div id="Flamer1">
-		<span>Flamer</span><span>1</span>
+		<span>Flamer</span><span><sup>1</sup></span>
 	</div>
 	<svg class="Line_2_A74_Line_711">
 		<path fill="transparent" stroke="rgba(0,0,0,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Line_2_A74_Line_711" d="M 0 0 L 172 0">
@@ -1524,7 +1524,7 @@
 		<span>Lasgun</span>
 	</div>
 	<div id="ID1Blast__Ignore_cover__In_add">
-		<span>1</span><span>Blast:</span><span style="font-style:normal;font-weight:normal;"> Ignore cover. In addition, make an attack roll that ignores cover against each explorer in the same hex as the target.<br/></span><br><span>2</span><span>Move Up:</span><span style="font-style:normal;font-weight:normal;"> The flamer cannot be fired at this range. The Traitor Guardsman moves towards the closest explorer instead of making an attack.</span>
+		<span><sup>1</sup></span><span>Blast:</span><span style="font-style:normal;font-weight:normal;"> Ignore cover. In addition, make an attack roll that ignores cover against each explorer in the same hex as the target.<br/></span><br><span><sup>2</sup></span><span>Move Up:</span><span style="font-style:normal;font-weight:normal;"> The flamer cannot be fired at this range. The Traitor Guardsman moves towards the closest explorer instead of making an attack.</span>
 	</div>
 	<svg class="Line_14">
 		<path fill="transparent" stroke="rgba(0,0,0,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Line_14" d="M 0 0 L 343 0">
@@ -1538,7 +1538,7 @@
 		<span>Pistol & Melee Weapon</span>
 	</div>
 	<div id="Grenade1">
-		<span>Grenade</span><span>1</span>
+		<span>Grenade</span><span><sup>1</sup></span>
 	</div>
 	<div id="Traitor_Guardsman">
 		<span>Traitor Guardsman</span>
@@ -1766,7 +1766,7 @@
 		</rect>
 	</svg>
 	<div id="Move_Up2">
-		<span>Move Up</span><span>2</span>
+		<span>Move Up</span><span><sup>2</sup></span>
 	</div>
 	<svg class="Rectangle_668">
 		<rect fill="rgba(0,0,0,1)" id="Rectangle_668" rx="0" ry="0" x="0" y="0" width="344" height="18">
