--- a/New_OM_Roll_13_15.html
+++ b/New_OM_Roll_13_15.html
@@ -1401,7 +1401,7 @@
 			<span>4+</span>
 		</div>
 		<div id="Thunder_Hammer1">
-			<span>Thunder Hammer</span><span>1</span>
+			<span>Thunder Hammer</span><span><sup>1</sup></span>
 		</div>
 		<svg class="Line_2_A60_Line_507">
 			<path fill="transparent" stroke="rgba(0,0,0,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Line_2_A60_Line_507" d="M 0 0 L 172 0">
@@ -1428,10 +1428,10 @@
 			</path>
 		</svg>
 		<div id="Plasma_Pistol2">
-			<span>Plasma Pistol</span><span>2</span>
+			<span>Plasma Pistol</span><span><sup>2</sup></span>
 		</div>
 		<div id="ID1Thunder_Hammer__No_defence_">
-			<span>1</span><span>Thunder Hammer:</span><span style="font-style:normal;font-weight:normal;"> No defence roll can be made against a Thunder Hammer attack.<br/></span><br><span>2</span><span>Plasma Pistol:</span><span style="font-style:normal;font-weight:normal;"> No defence roll can be made against an overcharged Plama Pistol attack.</span>
+			<span><sup>1</sup></span><span>Thunder Hammer:</span><span style="font-style:normal;font-weight:normal;"> No defence roll can be made against a Thunder Hammer attack.<br/></span><br><span><sup>2</sup></span><span>Plasma Pistol:</span><span style="font-style:normal;font-weight:normal;"> No defence roll can be made against an overcharged Plama Pistol attack.</span>
 		</div>
 	</div>
 	<div id="Obsidius_Mallex__Chaos_Lord">
@@ -1441,71 +1441,7 @@
 		<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_663" rx="0" ry="0" x="0" y="0" width="343" height="271">
 		</rect>
 	</svg>
-	<div id="Group_684">
-		<div id="Group_683">
-			<svg class="Rectangle_655">
-				<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="3px" stroke-linejoin="round" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_655" rx="7" ry="7" x="0" y="0" width="55" height="55">
-				</rect>
-			</svg>
-			<div id="ID1_3_A60_Text_1808">
-				<span>1-3</span>
-			</div>
-		</div>
-		<div id="Group_677">
-			<svg class="Rectangle_656">
-				<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="3px" stroke-linejoin="round" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_656" rx="7" ry="7" x="0" y="0" width="55" height="55">
-				</rect>
-			</svg>
-			<div id="ID10_12_A60_Text_1809">
-				<span>10-12</span>
-			</div>
-		</div>
-		<div id="Group_682">
-			<svg class="Rectangle_657">
-				<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="3px" stroke-linejoin="round" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_657" rx="7" ry="7" x="0" y="0" width="55" height="55">
-				</rect>
-			</svg>
-			<div id="ID4_6_A60_Text_1810">
-				<span>4-6</span>
-			</div>
-		</div>
-		<div id="Group_681">
-			<svg class="Rectangle_658">
-				<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="3px" stroke-linejoin="round" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_658" rx="7" ry="7" x="0" y="0" width="55" height="55">
-				</rect>
-			</svg>
-			<div id="ID7_9_A60_Text_1811">
-				<span>7-9</span>
-			</div>
-		</div>
-		<div id="Group_679">
-			<svg class="Rectangle_659">
-				<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="3px" stroke-linejoin="round" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_659" rx="7" ry="7" x="0" y="0" width="55" height="55">
-				</rect>
-			</svg>
-			<div id="ID13_15_A60_Text_1812">
-				<span>13-15</span>
-			</div>
-		</div>
-		<div id="Group_680">
-			<svg class="Rectangle_660">
-				<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="3px" stroke-linejoin="round" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_660" rx="7" ry="7" x="0" y="0" width="55" height="55">
-				</rect>
-			</svg>
-			<div id="ID16_19_A60_Text_1813">
-				<span>16-19</span>
-			</div>
-		</div>
-		<div id="Group_678">
-			<svg class="Rectangle_661">
-				<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="3px" stroke-linejoin="round" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_661" rx="7" ry="7" x="0" y="0" width="55" height="55">
-				</rect>
-			</svg>
-			<div id="ID20_A60_Text_1814">
-				<span>20</span>
-			</div>
-		</div>
-	</div>
+	<img id="Group_684" src="Group_684.png" srcset="Group_684.png 1x, Group_684@2x.png 2x">
 	<svg class="Rectangle_662">
 		<rect fill="rgba(0,0,0,1)" stroke="rgba(0,0,0,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_662" rx="0" ry="0" x="0" y="0" width="343" height="21">
 		</rect>
