--- a/New_TG_Roll_1_3.html
+++ b/New_TG_Roll_1_3.html
@@ -795,7 +795,7 @@
 		font-family: Helvetica Neue;
 		font-style: normal;
 		font-weight: bold;
-		font-size: 11px;
+		font-size: 10.5px;
 		color: rgba(0,0,0,1);
 	}
 	.Line_14 {
@@ -1494,7 +1494,7 @@
 		<span>4+</span>
 	</div>
 	<div id="Flamer1">
-		<span>Flamer</span><span>1</span>
+		<span>Flamer</span><span><sup>1</sup></span>
 	</div>
 	<svg class="Line_2_A71_Line_666">
 		<path fill="transparent" stroke="rgba(0,0,0,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Line_2_A71_Line_666" d="M 0 0 L 172 0">
@@ -1524,7 +1524,7 @@
 		<span>Lasgun</span>
 	</div>
 	<div id="ID1Blast__Ignore_cover__In_add">
-		<span>1</span><span>Blast:</span><span style="font-style:normal;font-weight:normal;"> Ignore cover. In addition, make an attack roll that ignores cover against each explorer in the same hex as the target.<br/></span><br><span>2</span><span>Move Up:</span><span style="font-style:normal;font-weight:normal;"> The flamer cannot be fired at this range. The Traitor Guardsman moves towards the closest explorer instead of making an attack.</span>
+		<span><sup>1</sup></span><span>Blast:</span><span style="font-style:normal;font-weight:normal;"> Ignore cover. In addition, make an attack roll that ignores cover against each explorer in the same hex as the target.<br/></span><br><span><sup>2</sup></span><span>Move Up:</span><span style="font-style:normal;font-weight:normal;"> The flamer cannot be fired at this range. The Traitor Guardsman moves towards the closest explorer instead of making an attack.</span>
 	</div>
 	<svg class="Line_14">
 		<path fill="transparent" stroke="rgba(0,0,0,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Line_14" d="M 0 0 L 343 0">
@@ -1538,7 +1538,7 @@
 		<span>Pistol & Melee Weapon</span>
 	</div>
 	<div id="Grenade1">
-		<span>Grenade</span><span>1</span>
+		<span>Grenade</span><span><sup>1</sup></span>
 	</div>
 	<div id="Traitor_Guardsman">
 		<span>Traitor Guardsman</span>
@@ -1547,71 +1547,7 @@
 		<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_663" rx="0" ry="0" x="0" y="0" width="343" height="271">
 		</rect>
 	</svg>
-	<div id="Group_684">
-		<div id="Group_683">
-			<svg class="Rectangle_655">
-				<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="3px" stroke-linejoin="round" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_655" rx="7" ry="7" x="0" y="0" width="55" height="55">
-				</rect>
-			</svg>
-			<div id="ID1_3_A71_Text_2334">
-				<span>1-3</span>
-			</div>
-		</div>
-		<div id="Group_677">
-			<svg class="Rectangle_656">
-				<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="3px" stroke-linejoin="round" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_656" rx="7" ry="7" x="0" y="0" width="55" height="55">
-				</rect>
-			</svg>
-			<div id="ID10_12_A71_Text_2335">
-				<span>10-12</span>
-			</div>
-		</div>
-		<div id="Group_682">
-			<svg class="Rectangle_657">
-				<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="3px" stroke-linejoin="round" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_657" rx="7" ry="7" x="0" y="0" width="55" height="55">
-				</rect>
-			</svg>
-			<div id="ID4_6_A71_Text_2336">
-				<span>4-6</span>
-			</div>
-		</div>
-		<div id="Group_681">
-			<svg class="Rectangle_658">
-				<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="3px" stroke-linejoin="round" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_658" rx="7" ry="7" x="0" y="0" width="55" height="55">
-				</rect>
-			</svg>
-			<div id="ID7_9_A71_Text_2337">
-				<span>7-9</span>
-			</div>
-		</div>
-		<div id="Group_679">
-			<svg class="Rectangle_659">
-				<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="3px" stroke-linejoin="round" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_659" rx="7" ry="7" x="0" y="0" width="55" height="55">
-				</rect>
-			</svg>
-			<div id="ID13_15_A71_Text_2338">
-				<span>13-15</span>
-			</div>
-		</div>
-		<div id="Group_680">
-			<svg class="Rectangle_660">
-				<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="3px" stroke-linejoin="round" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_660" rx="7" ry="7" x="0" y="0" width="55" height="55">
-				</rect>
-			</svg>
-			<div id="ID16_19_A71_Text_2339">
-				<span>16-19</span>
-			</div>
-		</div>
-		<div id="Group_678">
-			<svg class="Rectangle_661">
-				<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="3px" stroke-linejoin="round" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_661" rx="7" ry="7" x="0" y="0" width="55" height="55">
-				</rect>
-			</svg>
-			<div id="ID20_A71_Text_2340">
-				<span>20</span>
-			</div>
-		</div>
-	</div>
+	<img id="Group_684" src="Group_684.png" srcset="Group_684.png 1x, Group_684@2x.png 2x">
 	<svg class="Rectangle_662">
 		<rect fill="rgba(0,0,0,1)" stroke="rgba(0,0,0,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_662" rx="0" ry="0" x="0" y="0" width="343" height="21">
 		</rect>
@@ -1767,7 +1703,7 @@
 		</rect>
 	</svg>
 	<div id="Move_Up2">
-		<span>Move Up</span><span>2</span>
+		<span>Move Up</span><span><sup>2</sup></span>
 	</div>
 	<svg class="Rectangle_668">
 		<rect fill="rgba(0,0,0,1)" id="Rectangle_668" rx="0" ry="0" x="0" y="0" width="344" height="18">
