--- a/New_SD_Home.html
+++ b/New_SD_Home.html
@@ -1297,7 +1297,7 @@
 			<span>4+</span>
 		</div>
 		<div id="Pulse__Threat_Level_01">
-			<span>Pulse: Threat Level 0</span><span>1</span>
+			<span>Pulse: Threat Level 0</span><span><sup>1</sup></span>
 		</div>
 		<svg class="Line_2_A63_Line_546">
 			<path fill="transparent" stroke="rgba(0,0,0,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Line_2_A63_Line_546" d="M 0 0 L 172 0">
@@ -1331,7 +1331,7 @@
 			</path>
 		</svg>
 		<div id="Pulse__Threat_Level_11">
-			<span>Pulse: Threat Level 1</span><span>1</span>
+			<span>Pulse: Threat Level 1</span><span><sup>1</sup></span>
 		</div>
 		<svg class="single_triangle_A63_Rectangle_1528">
 			<pattern elementId="single_triangle_A63_Rectangle_1529" id="single_triangle_A63_Rectangle_1529_pattern" x="0" y="0" width="100%" height="100%">
@@ -1341,7 +1341,7 @@
 			</rect>
 		</svg>
 		<div id="ID1Spindle_Drone_Threat_Level_">
-			<span>1</span><span>Spindle Drone Threat Level:</span><span style="font-style:normal;font-weight:normal;"> Use the Pulse weapon line on the chart that corresponds to the current threat level.</span>
+			<span><sup>1</sup></span><span>Spindle Drone Threat Level:</span><span style="font-style:normal;font-weight:normal;"> Use the Pulse weapon line on the chart that corresponds to the current threat level.</span>
 		</div>
 		<svg class="Line_14">
 			<path fill="transparent" stroke="rgba(0,0,0,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Line_14" d="M 0 0 L 343 0">
@@ -1352,10 +1352,10 @@
 			</path>
 		</svg>
 		<div id="Pulse__Threat_Level_21">
-			<span>Pulse: Threat Level 2</span><span>1</span>
+			<span>Pulse: Threat Level 2</span><span><sup>1</sup></span>
 		</div>
 		<div id="Pulse__Threat_Level_31">
-			<span>Pulse: Threat Level 3</span><span>1</span>
+			<span>Pulse: Threat Level 3</span><span><sup>1</sup></span>
 		</div>
 		<svg class="Single_Blue_A63_Rectangle_1530">
 			<pattern elementId="Single_Blue_A63_Rectangle_1531" id="Single_Blue_A63_Rectangle_1531_pattern" x="0" y="0" width="100%" height="100%">
