--- a/New_SD_Roll_1_3.html
+++ b/New_SD_Roll_1_3.html
@@ -1507,7 +1507,7 @@
 			<span>4+</span>
 		</div>
 		<div id="Pulse__Threat_Level_01">
-			<span>Pulse: Threat Level 0</span><span>1</span>
+			<span>Pulse: Threat Level 0</span><span><sup>1</sup></span>
 		</div>
 		<svg class="Line_2_A64_Line_561">
 			<path fill="transparent" stroke="rgba(0,0,0,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Line_2_A64_Line_561" d="M 0 0 L 172 0">
@@ -1541,7 +1541,7 @@
 			</path>
 		</svg>
 		<div id="Pulse__Threat_Level_11">
-			<span>Pulse: Threat Level 1</span><span>1</span>
+			<span>Pulse: Threat Level 1</span><span><sup>1</sup></span>
 		</div>
 		<svg class="single_triangle_A64_Rectangle_1581">
 			<pattern elementId="single_triangle_A64_Rectangle_1582" id="single_triangle_A64_Rectangle_1582_pattern" x="0" y="0" width="100%" height="100%">
@@ -1551,7 +1551,7 @@
 			</rect>
 		</svg>
 		<div id="ID1Spindle_Drone_Threat_Level_">
-			<span>1</span><span>Spindle Drone Threat Level:</span><span style="font-style:normal;font-weight:normal;"> Use the Pulse weapon line on the chart that corresponds to the current threat level.</span>
+			<span><sup>1</sup></span><span>Spindle Drone Threat Level:</span><span style="font-style:normal;font-weight:normal;"> Use the Pulse weapon line on the chart that corresponds to the current threat level.</span>
 		</div>
 		<svg class="Line_14">
 			<path fill="transparent" stroke="rgba(0,0,0,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Line_14" d="M 0 0 L 343 0">
@@ -1562,10 +1562,10 @@
 			</path>
 		</svg>
 		<div id="Pulse__Threat_Level_21">
-			<span>Pulse: Threat Level 2</span><span>1</span>
+			<span>Pulse: Threat Level 2</span><span><sup>1</sup></span>
 		</div>
 		<div id="Pulse__Threat_Level_31">
-			<span>Pulse: Threat Level 3</span><span>1</span>
+			<span>Pulse: Threat Level 3</span><span><sup>1</sup></span>
 		</div>
 		<svg class="Single_Blue_A64_Rectangle_1583">
 			<pattern elementId="Single_Blue_A64_Rectangle_1584" id="Single_Blue_A64_Rectangle_1584_pattern" x="0" y="0" width="100%" height="100%">
@@ -1673,71 +1673,7 @@
 		<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_663" rx="0" ry="0" x="0" y="0" width="343" height="271">
 		</rect>
 	</svg>
-	<div id="Group_684">
-		<div id="Group_683">
-			<svg class="Rectangle_655">
-				<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="3px" stroke-linejoin="round" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_655" rx="7" ry="7" x="0" y="0" width="55" height="55">
-				</rect>
-			</svg>
-			<div id="ID1_3_A64_Text_1998">
-				<span>1-3</span>
-			</div>
-		</div>
-		<div id="Group_677">
-			<svg class="Rectangle_656">
-				<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="3px" stroke-linejoin="round" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_656" rx="7" ry="7" x="0" y="0" width="55" height="55">
-				</rect>
-			</svg>
-			<div id="ID10_12_A64_Text_1999">
-				<span>10-12</span>
-			</div>
-		</div>
-		<div id="Group_682">
-			<svg class="Rectangle_657">
-				<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="3px" stroke-linejoin="round" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_657" rx="7" ry="7" x="0" y="0" width="55" height="55">
-				</rect>
-			</svg>
-			<div id="ID4_6_A64_Text_2000">
-				<span>4-6</span>
-			</div>
-		</div>
-		<div id="Group_681">
-			<svg class="Rectangle_658">
-				<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="3px" stroke-linejoin="round" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_658" rx="7" ry="7" x="0" y="0" width="55" height="55">
-				</rect>
-			</svg>
-			<div id="ID7_9_A64_Text_2001">
-				<span>7-9</span>
-			</div>
-		</div>
-		<div id="Group_679">
-			<svg class="Rectangle_659">
-				<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="3px" stroke-linejoin="round" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_659" rx="7" ry="7" x="0" y="0" width="55" height="55">
-				</rect>
-			</svg>
-			<div id="ID13_15_A64_Text_2002">
-				<span>13-15</span>
-			</div>
-		</div>
-		<div id="Group_680">
-			<svg class="Rectangle_660">
-				<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="3px" stroke-linejoin="round" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_660" rx="7" ry="7" x="0" y="0" width="55" height="55">
-				</rect>
-			</svg>
-			<div id="ID16_19_A64_Text_2003">
-				<span>16-19</span>
-			</div>
-		</div>
-		<div id="Group_678">
-			<svg class="Rectangle_661">
-				<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="3px" stroke-linejoin="round" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_661" rx="7" ry="7" x="0" y="0" width="55" height="55">
-				</rect>
-			</svg>
-			<div id="ID20_A64_Text_2004">
-				<span>20</span>
-			</div>
-		</div>
-	</div>
+	<img id="Group_684" src="Group_684.png" srcset="Group_684.png 1x, Group_684@2x.png 2x">
 	<svg class="Rectangle_662">
 		<rect fill="rgba(0,0,0,1)" stroke="rgba(0,0,0,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_662" rx="0" ry="0" x="0" y="0" width="343" height="21">
 		</rect>
