--- a/Other_Reference.html
+++ b/Other_Reference.html
@@ -509,7 +509,7 @@
 		height: 349px;
 		text-align: left;
 		font-family: Helvetica Neue;
-		line-height: 10px
+		line-height: 11px;
 		font-style: normal;
 		font-weight: bold;
 		font-size: 9.5px;
