--- a/Other_Reference.html
+++ b/Other_Reference.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8"/>
+<meta charset="utf-8"/ name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <title>Other Reference</title>
 <link rel="stylesheet" type="text/css" href="headerstyle.css">
@@ -689,6 +689,52 @@
 		top: 25px;
 		overflow: visible;
 	}
+	table {
+		width:355px;
+		height:397px;
+		font-family: Helvetica Neue;
+		font-style: normal;
+		font-size: 10.5px;
+		position:absolute;
+		left:10px;
+		top:378px;
+	}
+	table, th, td {
+  		border: 1px solid rgba(112,112,112,1);
+		border-collapse: collapse;
+	}
+	th, td {
+  		padding: 5px;
+  		text-align: left;
+	}
+	th{
+		text-align:center;
+		font-weight:bold;
+	}
+	table#GenEvent tr:nth-child(even) {
+  		background-color: #eee;
+	}
+	table#GenEvent tr:nth-child(odd) {
+ 		background-color: #fff;
+	}
+	table#GenEvent caption{
+		background-color: black;
+		color: white;
+		font-size: 16px;
+		font-weight:bold;
+		padding:5px
+	}
+	table#GenEvent th{
+		background-color: rgba(187,186,190,1);
+		font-size: 12px;
+	}
+	.GECol1 {
+		font-size:16px;
+		text-align: center;
+		font-weight: bold;
+		overflow: visible;
+		white-space: nowrap;
+	}
 </style>
 </head>
 <body>
@@ -803,80 +849,53 @@
 		<path fill="transparent" stroke="rgba(112,112,112,1)" stroke-width="2px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Line_20" d="M 0 120 L 0 0">
 		</path>
 	</svg>
-	<svg class="Rectangle_107">
-		<rect fill="rgba(0,0,0,1)" stroke="rgba(112,112,112,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_107" rx="0" ry="0" x="0" y="0" width="355" height="27">
-		</rect>
-	</svg>
 	<div id="ID3_small_hostiles_2_small___1">
 		<span>3 small hostiles<br/>2 small & 1 large hostile<br/>2 large hostiles<br/>1 huge hostile<br/>Both Ratling Twins & 1 other explorer<br/>2 explorers</span>
 	</div>
-	<div id="EVENT_TABLE">
-		<span>EVENT TABLE</span>
-	</div>
-	<svg class="Rectangle_108">
-		<rect fill="rgba(187,186,190,1)" stroke="rgba(112,112,112,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_108" rx="0" ry="0" x="0" y="0" width="355" height="19">
-		</rect>
-	</svg>
-	<div id="EVENT">
-		<span>EVENT</span>
-	</div>
-	<div id="ROLL_A1_Text_36">
-		<span>ROLL</span>
-	</div>
-	<div id="All_is_Dust__If_any_discovery_">
-		<span>All is Dust: </span><span style="font-style:normal;font-weight:normal;">If any discovery markers are still on the battlefield, the leader must discard one of them. If there are no discovery markers, each explorer loses 1 inspiration point, to a minimum of 0.<br/></span><br><span>Unfilfilled Destiny: </span><span style="font-style:normal;font-weight:normal;">Do not make a destiny roll at the start of the next turn.<br/></span><br><span>Not Dead Yet: </span><span style="font-style:normal;font-weight:normal;">The leader must pick one hostile that was slain during the combat and has not returned to the battlefield, and then deploy them as close to an explorer as possible.<br/></span><br><span>Changing Conditions: </span><span style="font-style:normal;font-weight:normal;">Draw an encounter card. If the card has a twist, it applies for the rest of the combat. If not, there is no effect.<br/></span><br><span>Escape Chamber: </span><span style="font-style:normal;font-weight:normal;">The leader replaces the portal furthest from any explorers with a maglev transport escape chamber. If more than one portal is equally far from the explorers, the leader can pick which one of replace. If this event has already been rolled, or if an explorer has used a Summon action, there is no effect.<br/></span><br><span>Inspiration: </span><span style="font-style:normal;font-weight:normal;">The leader picks an explorer. That explorer receives 1 inspiration point.<br/></span><br><span>Heroic Effort: </span><span style="font-style:normal;font-weight:normal;">The leader picks an explorer that is out of action. Deploy the explorer in the same hex as another explorer or as close to another explorer as possible, and then make a vitality roll for them. If no explorers are out of action, the leader picks an explorer. Make a vitality roll for that explorer.<br/></span><br><span>Lucky Find: </span><span style="font-style:normal;font-weight:normal;">The leader picks an explorer. That explorer draws a discovery card.</span>
-	</div>
-	<div id="ID1__2_3__">
-		<span>1<br/><br/>2-3<br/></span><br>
-	</div>
-	<div id="ID4_6">
-		<span>4-6</span>
-	</div>
-	<div id="ID7_10___11_14">
-		<span>7-10<br/><br/><br/>11-14</span>
-	</div>
-	<div id="ID15_17___18_19">
-		<span>15-17<br/><br/><br/>18-19</span>
-	</div>
-	<div id="ID20">
-		<span>20</span>
-	</div>
-	<svg class="Line_21">
-		<path fill="transparent" stroke="rgba(112,112,112,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Line_21" d="M 0 0 L 355 0">
-		</path>
-	</svg>
-	<svg class="Line_22">
-		<path fill="transparent" stroke="rgba(112,112,112,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Line_22" d="M 0 0 L 355 0">
-		</path>
-	</svg>
-	<svg class="Line_23">
-		<path fill="transparent" stroke="rgba(112,112,112,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Line_23" d="M 0 0 L 355 0">
-		</path>
-	</svg>
-	<svg class="Line_24">
-		<path fill="transparent" stroke="rgba(112,112,112,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Line_24" d="M 0 0 L 355 0">
-		</path>
-	</svg>
-	<svg class="Line_25">
-		<path fill="transparent" stroke="rgba(112,112,112,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Line_25" d="M 0 0 L 355 0">
-		</path>
-	</svg>
-	<svg class="Line_26">
-		<path fill="transparent" stroke="rgba(112,112,112,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Line_26" d="M 0 0 L 355 0">
-		</path>
-	</svg>
-	<svg class="Line_27">
-		<path fill="transparent" stroke="rgba(112,112,112,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Line_27" d="M 0 0 L 355 0">
-		</path>
-	</svg>
-	<svg class="Line_28">
-		<path fill="transparent" stroke="rgba(112,112,112,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Line_28" d="M 0 374 L 0 0">
-		</path>
-	</svg>
 	<svg class="Rectangle_11">
 		<rect fill="rgba(0,0,0,1)" id="Rectangle_11" rx="0" ry="0" x="0" y="0" width="375" height="88">
 		</rect>
 	</svg>
+	<table id="GenEvent">
+		<caption>EVENT TABLE</caption>
+		<tr>
+			<th>ROLL</th>
+			<th>EVENT</th>
+		</tr>
+		<tr>
+			<td class="GECol1">1</td>
+			<td><b>All is Dust:</b> If any discovery markers are still on the battlefield, the leader must discard one of them. If ther are no discovery markers, each explorer loses 1 inspiration point, to a minimum of 0.</td>
+		</tr>
+		<tr>
+			<td class="GECol1">2-3</td>
+			<td><b>Unfulfilled Destiny:</b> Do not make any destiny roll at the start of the next turn.</td>
+		</tr>
+		<tr>
+			<td class="GECol1">4-6</td>
+			<td><b>Not Dead Yet:</b> The leader must pick one hostile that was slain during the combat and has not returned to the battlefield, and then deploy them as close to an explorer as possible.</td>
+		</tr>
+		<tr>
+			<td class="GECol1">7-10</td>
+			<td><b>Changing Conditions:</b> Draw an encounter card. If the card has a twist, it applies for the rest of the combat. If not, there is no effect.</td>
+		</tr>
+		<tr>
+			<td class="GECol1">11-14</td>
+			<td><b>Escape Chamber:</b> The leader replaces the portal furthest from any explorers with a maglev transport escape chamber. If more than one portal is equally far from the explorers, the leader can pick which one to replace. If this event has already been rolled, or if an explorer has used a Summon action, there is no effect.</td>
+		</tr>
+		<tr>
+			<td class="GECol1">15-17</td>
+			<td><b>Inspiration:</b> The leader picks an explorer. That explorer receives 1 inspiration point.</td>
+		</tr>
+		<tr>
+			<td class="GECol1">18-19</td>
+			<td><b>Heroic Effort:</b> The leader picks an explorer that is out of action. Deploy the explorer in the same hex as another explorer or as close to anothe explorer as possible, and then make a vitality roll for them. If no explorers are out of action, the leader picks an explorer. Make a vitality roll for that explorer.</td>
+		</tr>
+		<tr>
+			<td class="GECol1">20</td>
+			<td><b>Lucky Find:</b> The leader picks an explorer. That explorer draws a discovery card.</td>
+		</tr>
+		
+	</table>
 	<div id="Other_Reference_A1_Text_43">
 		<span>Other Reference</span>
 	</div>
