--- a/New_OM_Roll_20.html
+++ b/New_OM_Roll_20.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8"/>
+<meta charset="utf-8"/ name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <title>New OM Roll 20</title>
 <link rel="stylesheet" type="text/css" href="headerstyle.css">
