--- a/New_RP_20.html
+++ b/New_RP_20.html
@@ -1401,7 +1401,7 @@
 			<span>4+</span>
 		</div>
 		<div id="Chaos_Stave1">
-			<span>Chaos Stave</span><span>1</span>
+			<span>Chaos Stave</span><span><sup>1</sup></span>
 		</div>
 		<svg class="Line_2_A39_Line_256">
 			<path fill="transparent" stroke="rgba(0,0,0,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Line_2_A39_Line_256" d="M 0 0 L 172 0">
@@ -1424,7 +1424,7 @@
 			</path>
 		</svg>
 		<div id="ID1Empowered__The_action_dice_">
-			<span>1</span><span>Empowered:</span><span style="font-style:normal;font-weight:normal;"> The action dice for a Chaos Stave attack is            if the Rogue Psyker is empowered (see reverse), and      in all other circumstances.</span>
+			<span><sup>1</sup></span><span>Empowered:</span><span style="font-style:normal;font-weight:normal;"> The action dice for a Chaos Stave attack is <img src="double_triangle_A33_Rectangle_474_pattern.png" alt="doubletriangle" align="bottom"> if the Rogue Psyker is empowered (see reverse), and <img src="single_triangle_A33_Rectangle_476_pattern.png" alt="singletriangle" align="bottom"> in all other circumstances.</span>
 		</div>
 	</div>
 	<div id="Rogue_Psyker">
@@ -1566,20 +1566,6 @@
 			<image x="0" y="0" width="100%" height="100%" href="double_triangle_A39_Rectangle_742_pattern.png" xlink:href="double_triangle_A39_Rectangle_742_pattern.png"></image>
 		</pattern>
 		<rect fill="url(#double_triangle_A39_Rectangle_742_pattern)" id="double_triangle_A39_Rectangle_741" rx="0" ry="0" x="0" y="0" width="29" height="12">
-		</rect>
-	</svg>
-	<svg class="double_triangle_A39_Rectangle_743">
-		<pattern elementId="double_triangle_A39_Rectangle_744" id="double_triangle_A39_Rectangle_744_pattern" x="0" y="0" width="100%" height="100%">
-			<image x="0" y="0" width="100%" height="100%" href="double_triangle_A39_Rectangle_744_pattern.png" xlink:href="double_triangle_A39_Rectangle_744_pattern.png"></image>
-		</pattern>
-		<rect fill="url(#double_triangle_A39_Rectangle_744_pattern)" id="double_triangle_A39_Rectangle_743" rx="0" ry="0" x="0" y="0" width="25" height="11">
-		</rect>
-	</svg>
-	<svg class="single_triangle_A39_Rectangle_745">
-		<pattern elementId="single_triangle_A39_Rectangle_746" id="single_triangle_A39_Rectangle_746_pattern" x="0" y="0" width="100%" height="100%">
-			<image x="0" y="0" width="100%" height="100%" href="single_triangle_A39_Rectangle_746_pattern.png" xlink:href="single_triangle_A39_Rectangle_746_pattern.png"></image>
-		</pattern>
-		<rect fill="url(#single_triangle_A39_Rectangle_746_pattern)" id="single_triangle_A39_Rectangle_745" rx="0" ry="0" x="0" y="0" width="12.713" height="11">
 		</rect>
 	</svg>
 	<div id="mySidenav" class="sidenav">
