--- a/New_UG_Home.html
+++ b/New_UG_Home.html
@@ -774,7 +774,7 @@
 		position: absolute;
 		left: 2px;
 		top: 229px;
-		overflow: hidden;
+		overflow: visible;
 		width: 340px;
 		height: 68px;
 		text-align: left;
