--- a/New_OM_Roll_13_15.html
+++ b/New_OM_Roll_13_15.html
@@ -796,7 +796,7 @@
 		position: absolute;
 		left: 2px;
 		top: 261px;
-		overflow: hidden;
+		overflow: visible;
 		width: 340px;
 		height: 68px;
 		text-align: left;
