--- a/Other_Reference.html
+++ b/Other_Reference.html
@@ -48,19 +48,21 @@
 		left: 10px;
 		top: 378px;
 	}
-	#HEX_LIMITS {
+	#Hexlimits {
 		position: absolute;
-		left: 143px;
 		top: 247px;
 		overflow: visible;
-		width: 92px;
+		width: 248px;
 		white-space: nowrap;
 		text-align: left;
 		font-family: Helvetica Neue;
 		font-style: normal;
-		font-weight: bold;
-		font-size: 16px;
+		font-size: 12px;
 		color: rgba(0,0,0,1);
+		border: 1px solid rgba(112,112,112,1);
+		background-color: #FFFFFF;
+		left:50%;
+		margin-left:-124px;
 	}
 	.Rectangle_101 {
 		position: absolute;
@@ -453,7 +455,7 @@
 	#EVENT_TABLE {
 		position: absolute;
 		left: 130px;
-		top: 382px;
+		top: 380px;
 		overflow: visible;
 		width: 108px;
 		white-space: nowrap;
@@ -697,7 +699,7 @@
 		font-size: 10px;
 		position:absolute;
 		left:10px;
-		top:378px;
+		top:370px;
 	}
 	table, th, td {
   		border: 1px solid rgba(112,112,112,1);
@@ -739,13 +741,6 @@
 </head>
 <body>
 <div id="Other_Reference">
-	<svg class="Rectangle_99">
-		<rect fill="rgba(255,255,255,1)" stroke="rgba(112,112,112,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_99" rx="0" ry="0" x="0" y="0" width="248" height="123">
-		</rect>
-	</svg>
-	<div id="HEX_LIMITS">
-		<span>HEX LIMITS</span>
-	</div>
 	<svg class="Rectangle_101">
 		<rect fill="rgba(0,0,0,1)" stroke="rgba(112,112,112,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_101" rx="0" ry="0" x="0" y="0" width="355" height="25">
 		</rect>
@@ -845,9 +840,9 @@
 		<path fill="transparent" stroke="rgba(112,112,112,1)" stroke-width="2px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Line_20" d="M 0 120 L 0 0">
 		</path>
 	</svg>
-	<div id="ID3_small_hostiles_2_small___1">
-		<span>3 small hostiles<br/>2 small & 1 large hostile<br/>2 large hostiles<br/>1 huge hostile<br/>Both Ratling Twins & 1 other explorer<br/>2 explorers</span>
-	</div>
+	<div id="Hexlimits">
+		<p style="text-align:center;margin:0;"><b>HEX LIMITS</b></p><span style="padding-left:5px;">3 <b>small</b> hostiles</span><br><span style="padding-left:5px;">2 <b>small</b> & 1 <b>large</b> hostile</span><br><span style="padding-left:5px;">2 <b>large</b> hostiles</span><br><span style="padding-left:5px;">1 <b>huge</b> hostile</span><br><span style="padding-left:5px;">Both <b>Ratling Twins</b> & 1 other <b>explorer</b></span><br><span style="padding-left:5px;">2 <b>explorers</b></span>
+</div>
 	<svg class="Rectangle_11">
 		<rect fill="rgba(0,0,0,1)" id="Rectangle_11" rx="0" ry="0" x="0" y="0" width="375" height="88">
 		</rect>
